css changes fixed and wrapup -to date

--- a/src/components/Inventory/Inventory.css
+++ b/src/components/Inventory/Inventory.css
@@ -11,6 +11,16 @@ body{ display: flex; align-items: center; background: #eaeaea; min-height: 100vh
 .filter{ position: relative; top: 0; left: 0; right: 0; bottom: 0; z-index: 1; opacity: .7; }
 
 
+/* General CSS Starts*/
+.spinner{ position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 999; }
+.upload-btn{ border: 1px solid #29ab87; background: #29ab87; color: #fafafa; font-size: 13px; padding: 3px; border-radius: 3px; cursor: pointer; text-decoration: none; }
+.upload-btn:hover{ color: #eaeaea;}
+.refresh-btn{ border: 1px solid #4c9be0; background: #fafafa; color: #4c9be0; font-size: 15px; padding: 4px; margin-left: 10px; border-radius: 3px; cursor: pointer; text-decoration: none;}
+.refresh-btn:hover{ background: #4c9be0; color: #fafafa;}
+/* General CSS Ends*/
+
+
+
 /* Search Box Starts*/
 .search_box{ width: 25%; background:#fafafa; border-radius: 5px;  position: absolute; top: 9rem; right: 0.5rem;}
 .search_box input{ border: 2px solid #eaeaea; transition: 0.5s; border-radius: 5px; width: 100%; outline: none;  color: #888888; font-size: 14px; padding: 10px; position: relative;}
@@ -22,22 +32,20 @@ body{ display: flex; align-items: center; background: #eaeaea; min-height: 100vh
 }
 /* Search Box Ends*/
 
+
+
 /* Upload File Starts*/
 .upload_file{ position: absolute; top: 10rem; left: 1rem;}
 .upload_file p{ color: #b95754; font-size: 12px; padding: 5px; user-select: none;}
 .upload_box{ font-size: 14px; color: #888888; background: #fafafa; border-radius: 20px; outline: none; cursor: pointer;}
 ::-webkit-file-upload-button{ color: #29ab87; background: #fafafa; padding: 5px; border: 1px solid #29ab87; border-radius: 20px; outline: none; cursor: pointer;}
 ::-webkit-file-upload-button:hover{ color: #fafafa; background: #29ab87;}
-
-.upload-btn{ margin: 0 8px 0 8px;  background:#fafafa; border: 1px solid #344a72; border-right: 2px solid #344a72; color: #344a72; font-size: 15px; letter-spacing: 1px; padding: 5px; cursor: pointer;}
-.upload-btn:hover{ color: #fafafa; background: #344a72; }
-
 @media(max-width: 1024px){
     .upload_file{ display: none;}
 }
 /* Upload File Ends*/
 
-.spinner{ position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 999; }
+
 
 /* prod_table Starts*/
 .wrapper{ position: absolute; top: 19rem; width: 100%; background: #fafafa; box-shadow: 0 5px 12px rgba(32, 32, 32, .3); height: 450px; overflow: hidden; overflow-y: auto;}
@@ -81,10 +89,6 @@ body{ display: flex; align-items: center; background: #eaeaea; min-height: 100vh
 .view-btn:hover{ color: #eaeaea;}
 .update-btn{ border: 1px solid #29ab87; background: #29ab87; color: #fafafa; font-size: 13px; }
 .update-btn:hover{ color: #eaeaea;}
-.upload-btn{ border: 1px solid #29ab87; background: #29ab87; color: #fafafa; font-size: 13px; padding: 3px; }
-.upload-btn:hover{ color: #eaeaea;}
-.refresh-btn{ border: 1px solid #4c9be0; background: #fafafa; color: #4c9be0; font-size: 15px; padding: 4px; margin-left: 10px;}
-.refresh-btn:hover{ background: #4c9be0; color: #fafafa;}
 .download-btn .icon{ cursor: pointer;}
 
 @media print { 
@@ -100,4 +104,3 @@ body{ display: flex; align-items: center; background: #eaeaea; min-height: 100vh
     .prod_table tbody td:nth-child(3) input[type="text"]{ width: 10rem;}
 }
 /* prod_table Ends*/
-
